tests/errors/tc_stmt_main_notpub.lx
@module "main"

const main -> fn () int {
    return 0;
}
